--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>Images</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<img src="doggie.jpg" width="350" height="350">
-	<img src="lamb.jpg" width="350" height="350">
-	<img src="pexels.jpeg" width="350" height="350">
+	<img src="doggie.jpg">
+	<img src="lamb.jpg">
+	<img src="pexels.jpeg">
 </body>
 </html>
